<resources>
    <string name="app_name">GymStat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="weight">Weight (kg): </string>
    <string name="weight2">Weight: </string>
    <string name="exercises">Exercises: </string>
    <string name="set_name">Set name: </string>
    <string name="reps">Reps: </string>
    <string name="date">Date: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sharedpreferences">myprefs</string>
</resources>
