<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/coloredBackground"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/filip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/view_set_name"
                        style="@style/head_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activity_horizontal_margin"
                        android:paddingTop="8dp"
                        android:text="Small Text" />

                    <TextView
                        android:id="@+id/view_set_weight"
                        style="@style/normal_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:text="@string/weight2"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/view_set_reps"
                        style="@style/normal_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:text="@string/reps"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/view_set_date"
                        style="@style/normal_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:text="@string/date"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView10"
            style="@style/head_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="Description:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/view_set_desc"
            style="@style/normal_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="No description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView11"
            style="@style/head_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="History: "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ListView
            android:id="@+id/view_weight_list"
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11"
            android:padding="@dimen/activity_horizontal_margin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/add_to_set_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/colorPrimary"
                android:text="Add" />

            <Button
                android:id="@+id/edit_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@+id/add_to_set_button"
                android:layout_toRightOf="@+id/add_to_set_button"
                android:background="@color/colorPrimary"
                android:text="Edit" />

            <Button
                android:id="@+id/delete_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edit_set"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorWarningRed"
                android:text="Delete" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/edit_set"
                android:layout_toStartOf="@+id/edit_set" />

        </RelativeLayout>


    </LinearLayout>
</LinearLayout>